# legacy

crates/fo_data/benches/: main_bench.rs
crates/fo_data/src/: converter.rs  fofrm.rs  lib.rs  palette.rs  retriever.rs
crates/fo_data/src/retriever/: fo.rs
crates/fo_msg_format/src/: lexer.rs  lib.rs
crates/mrhandy/: Cargo.toml
crates/mrhandy/src/: lib.rs
dll/fo_engine_types_bindings/r357/: Cargo.toml  generate.sh  generator.toml  toast.yml
dll/fo_engine_types_bindings/r476/: Cargo.toml  generate.sh  generator.toml  toast.yml
dll/fo_engine_types_bindings/r476/src/: lib.rs
dll/fo_engine_types_bindings/tlj/: Cargo.toml  generator.toml  toast.yml
dll/fo_engine_types_bindings/tlj/src/: lib.rs
web_server/: Cargo.toml
web_server/basic/src/: main.rs
web_server/core/: Cargo.toml
web_server/core/src/web/: data.rs  map_viewer.rs  mod.rs
web_server/with_map_viewer/src/: main.rs
